<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more...</string>
    <string name="insert_model">Insert models</string>
    <string name="options_string">Handle your message</string>
    <string name="app_name">aParto</string>
	<string name="setting_number">mobileNumber</string>
	<string name="setting_sms">BodySms</string>
	<string name="setting_delivery_reports">DeliveryReports</string>
	<string name="sending">Sending...</string>
	<string name="date_ddmmyyyy">Date (dd/mm/yyyy)</string>
	<string name="date_mmddyyyy">Date (mm/dd/yyyy)</string>
	<string name="time_12h">Time (12 hours)</string>
	<string name="time_24h">Time (24 hours)</string>
	<string name="format_date_mdy">{date_mdy}</string>
	<string name="format_date_dmy">{date_dmy}</string>
	<string name="format_time_12">{time_12}</string>
	<string name="format_time_24">{time_24}</string>
	<string name="add_profile">New</string>
	<string name="about">About</string>
	<string name="profile_name">Profile name</string>
	<string name="profile_id">profile_id</string>
	<string name="configuration_saved">Configuration saved</string>
	<string name="telephon_number_to_send_sms">Telephone number to:</string>
	<string name="message_text">Message body</string>
	<string name="delivery_report">Delivery report</string>
	<string name="close">Close</string>
	<string name="save">Save</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="tools">Tools</string>
	<string name="do_want_delete_profile">Do you want delete \'%s\' profile?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="sms_error_generic_failure">Not send, generic failure</string>
	<string name="sms_error_no_service">Not send, no service</string>
	<string name="sms_error_null_pdu">Not send, null PDU</string>
	<string name="sms_error_radio_off">Not send, radio off</string>
	<string name="sms_error_arguments">Not send, wrong arguments on configuration</string>
	<string name="sms_sent">Text message sent</string>
	<string name="option_error_missing_name">Sorry but the name is required!</string>
	<string name="option_error_missing_number">Sorry but the phone number is required!</string>
	<string name="option_error_missing_text">Sorry but the message text is required!</string>
	<string name="version">Version:</string>
	<string name="default_profile">Send message</string>
	<string name="type_phone_name">To</string>
	<string name="work">Work</string>
	<string name="home">Home</string>
	<string name="mobile">Mobile</string>
	<string name="other">Other</string>
</resources>
