<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephon_number_to_send_sms" />

            <AutoCompleteTextView
                android:id="@+id/txtNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:ems="10"
                android:hint="@string/type_phone_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:nextFocusDown="@+id/txtProfileName"
                android:singleLine="true" >

                <requestFocus />
            </AutoCompleteTextView>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name" />

            <EditText
                android:id="@+id/txtProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_name"
                android:inputType="textCapSentences"
                android:nextFocusDown="@+id/txtMessage"
                android:nextFocusUp="@+id/txtNumber" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_text" />

            <EditText
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/message_text"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:maxLength="160"
                android:nextFocusDown="@+id/CheckBoxReports"
                android:nextFocusUp="@+id/txtProfileName" />

            <CheckBox
                android:id="@+id/CheckBoxReports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/btnSave"
                android:nextFocusUp="@+id/txtMessage"
                android:text="@string/delivery_report" />

            <LinearLayout
                android:id="@+id/linearLayoutButtons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="80dp"
                    android:text="@string/close" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="80dp"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>